// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ensureNonZero instruction compiler > ensures float operand is non-zero with literal default 1`] = `
{
  "byteCode": [
    33,
    0,
    32,
    0,
    67,
    0,
    0,
    0,
    0,
    91,
    4,
    64,
    67,
    0,
    0,
    32,
    64,
    33,
    0,
    5,
    11,
    32,
    0,
  ],
  "locals": {
    "__ensureNonZero_temp_2": {
      "index": 0,
      "isInteger": false,
    },
  },
  "stack": [
    {
      "isInteger": false,
      "isNonZero": true,
    },
  ],
}
`;

exports[`ensureNonZero instruction compiler > ensures float64 operand is non-zero with float64 default 1`] = `
{
  "byteCode": [
    33,
    0,
    32,
    0,
    68,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    97,
    4,
    64,
    68,
    0,
    0,
    0,
    0,
    0,
    0,
    4,
    64,
    33,
    0,
    5,
    11,
    32,
    0,
  ],
  "locals": {
    "__ensureNonZero_temp_3": {
      "index": 0,
      "isFloat64": true,
      "isInteger": false,
    },
  },
  "stack": [
    {
      "isFloat64": true,
      "isInteger": false,
      "isNonZero": true,
    },
  ],
}
`;

exports[`ensureNonZero instruction compiler > ensures integer operand is non-zero 1`] = `
{
  "byteCode": [
    33,
    0,
    32,
    0,
    69,
    4,
    127,
    65,
    1,
    5,
    32,
    0,
    11,
  ],
  "locals": {
    "__ensureNonZero_temp_1": {
      "index": 0,
      "isInteger": true,
    },
  },
  "stack": [
    {
      "isInteger": true,
      "isNonZero": true,
    },
  ],
}
`;
